refactor: update pom file, migrate technologies to new version, add album mapper and inprove album service logic, other changes